[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/adastral.png" type="Texture" id=1]
[ext_resource path="res://fonts/bold_font_data.tres" type="DynamicFontData" id=2]
[ext_resource path="res://themes/main.tres" type="Theme" id=3]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/bg.png" type="Texture" id=5]
[ext_resource path="res://main.gd" type="Script" id=6]
[ext_resource path="res://assets/mockup3.png" type="Texture" id=7]
[ext_resource path="res://assets/of-mono.png" type="Texture" id=8]
[ext_resource path="res://fonts/font_data.tres" type="DynamicFontData" id=9]
[ext_resource path="res://assets/settings.png" type="Texture" id=10]
[ext_resource path="res://assets/tf2c-mono.png" type="Texture" id=11]
[ext_resource path="res://assets/about.png" type="Texture" id=12]
[ext_resource path="res://assets/lf2-mono.png" type="Texture" id=13]
[ext_resource path="res://assets/pf2-mono.png" type="Texture" id=14]
[ext_resource path="res://Buttons.gd" type="Script" id=15]

[sub_resource type="Shader" id=22]
code = "shader_type canvas_item;
uniform float divide = 1;
uniform float blur = 0.8;
void fragment() {
    COLOR = texture(TEXTURE, UV);
    COLOR.a = min(COLOR.a,smoothstep(divide,blur,UV.x));
}"

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 22 )
shader_param/divide = 1.0
shader_param/blur = 0.7

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="Shader" id=27]
code = "shader_type canvas_item;
uniform vec4 color : hint_color;

void fragment() {
	//COLOR = color.rgba * textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0);
	COLOR = color.rgba;
}"

[sub_resource type="ShaderMaterial" id=28]
shader = SubResource( 27 )
shader_param/color = Color( 0, 0.360784, 0.615686, 0.388235 )

[sub_resource type="DynamicFont" id=16]
size = 21
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=29]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=30]
size = 20
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 14
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 22
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=15]
size = 22
font_data = ExtResource( 9 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
margin_top = 64.0
margin_right = 768.0
margin_bottom = 564.0
texture = ExtResource( 5 )
expand = true

[node name="Panel" type="Panel" parent="."]
margin_right = 768.0
margin_bottom = 64.0

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = SubResource( 23 )
margin_left = 36.0
margin_top = 116.0
margin_right = 520.0
margin_bottom = 240.0
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 484, 124 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
msaa = 2
debanding = true
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ViewportContainer/Viewport"]
margin_right = 497.0
margin_bottom = 128.0
theme = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="ViewportContainer/Viewport/ScrollContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 492.0
margin_bottom = 124.0
size_flags_vertical = 3
script = ExtResource( 15 )

[node name="TF2CButton" type="TextureButton" parent="ViewportContainer/Viewport/ScrollContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 110.0
margin_bottom = 115.0
rect_min_size = Vector2( 110, 110 )
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 11 )
expand = true

[node name="VSeparator" type="VSeparator" parent="ViewportContainer/Viewport/ScrollContainer/HBoxContainer"]
margin_left = 114.0
margin_right = 122.0
margin_bottom = 120.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/separator = SubResource( 25 )

[node name="OFButton" type="TextureButton" parent="ViewportContainer/Viewport/ScrollContainer/HBoxContainer"]
margin_left = 126.0
margin_top = 5.0
margin_right = 236.0
margin_bottom = 115.0
rect_min_size = Vector2( 110, 110 )
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
expand = true

[node name="VSeparator2" type="VSeparator" parent="ViewportContainer/Viewport/ScrollContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 248.0
margin_bottom = 120.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/separator = SubResource( 26 )

[node name="PF2Button" type="TextureButton" parent="ViewportContainer/Viewport/ScrollContainer/HBoxContainer"]
margin_left = 252.0
margin_top = 5.0
margin_right = 362.0
margin_bottom = 115.0
rect_min_size = Vector2( 110, 110 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 14 )
expand = true

[node name="VSeparator3" type="VSeparator" parent="ViewportContainer/Viewport/ScrollContainer/HBoxContainer"]
margin_left = 366.0
margin_right = 374.0
margin_bottom = 120.0
rect_min_size = Vector2( 8, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/separator = SubResource( 25 )

[node name="LFButton" type="TextureButton" parent="ViewportContainer/Viewport/ScrollContainer/HBoxContainer"]
margin_left = 378.0
margin_top = 5.0
margin_right = 488.0
margin_bottom = 115.0
rect_min_size = Vector2( 110, 110 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 13 )
expand = true

[node name="AdastralLogo" type="TextureRect" parent="."]
margin_left = 30.0
margin_top = 12.0
margin_right = 72.0
margin_bottom = 54.0
texture = ExtResource( 1 )
expand = true

[node name="TextureRect3" type="Panel" parent="."]
material = SubResource( 28 )
margin_left = 1.0
margin_top = 255.0
margin_right = 768.0
margin_bottom = 350.0

[node name="GameText" type="Label" parent="."]
margin_left = 31.0
margin_top = 69.0
margin_right = 698.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 4 )
text = "Welcome to Adastral! Select a game to manage."
valign = 1

[node name="Adastral" type="Label" parent="."]
margin_left = 85.0
margin_top = 20.0
margin_right = 158.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0.972549, 0.952941, 0.933333, 1 )
custom_fonts/font = SubResource( 16 )
text = "Adastral"
align = 1
valign = 1

[node name="Adastral2" type="Label" parent="."]
margin_left = 593.0
margin_top = 19.0
margin_right = 648.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.972549, 0.952941, 0.933333, 1 )
custom_fonts/font = SubResource( 16 )
text = "v0.0.1"
align = 1
valign = 1

[node name="LatestVersion" type="RichTextLabel" parent="."]
margin_left = 547.0
margin_top = 193.0
margin_right = 733.0
margin_bottom = 219.0
custom_fonts/bold_font = SubResource( 29 )
custom_fonts/normal_font = SubResource( 30 )
bbcode_enabled = true
bbcode_text = "Latest Version: [b]2.1.3[/b]"
text = "Latest Version: 2.1.3"
scroll_active = false

[node name="InstalledVersion" type="RichTextLabel" parent="."]
margin_left = 547.0
margin_top = 218.0
margin_right = 733.0
margin_bottom = 244.0
custom_fonts/bold_font = SubResource( 29 )
custom_fonts/normal_font = SubResource( 30 )
bbcode_enabled = true
bbcode_text = "Installed Version: [b]2.1.2[/b]"
text = "Installed Version: 2.1.2"
scroll_active = false

[node name="Path" type="Label" parent="."]
margin_left = 35.0
margin_top = 301.0
margin_right = 408.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 9 )
text = "Installing to: /this/is/a/very/long/directory/open_fortress"
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 33.0
margin_top = 277.0
margin_right = 558.0
margin_bottom = 300.0
value = 50.0
percent_visible = false

[node name="Install" type="Button" parent="."]
margin_left = 656.0
margin_top = 277.0
margin_right = 740.0
margin_bottom = 318.0
custom_fonts/font = SubResource( 11 )
text = "Install"

[node name="Verify" type="Button" parent="."]
margin_left = 567.0
margin_top = 277.0
margin_right = 651.0
margin_bottom = 318.0
custom_fonts/font = SubResource( 15 )
text = "Verify"

[node name="AdvancedButton" type="TextureButton" parent="."]
margin_left = 714.0
margin_top = 18.0
margin_right = 742.0
margin_bottom = 46.0
texture_normal = ExtResource( 10 )
expand = true

[node name="AboutButton" type="TextureButton" parent="."]
margin_left = 668.0
margin_top = 17.0
margin_right = 698.0
margin_bottom = 47.0
texture_normal = ExtResource( 12 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.607843 )
margin_right = 768.0
margin_bottom = 387.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="change_to" from="." to="ViewportContainer/Viewport/ScrollContainer/HBoxContainer" method="_on_Control_change_to"]
[connection signal="pressed" from="ViewportContainer/Viewport/ScrollContainer/HBoxContainer/TF2CButton" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="ViewportContainer/Viewport/ScrollContainer/HBoxContainer/OFButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="ViewportContainer/Viewport/ScrollContainer/HBoxContainer/PF2Button" to="." method="_on_PF2Button_pressed"]
[connection signal="pressed" from="AdvancedButton" to="." method="_on_Button4_pressed"]
